# raster-time-series

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  benchmark_query.cpp  rts_run_all_queries.cpp  rts_run_query.cpp  rts_test_all.cpp  rts_util.cpp
src/datatypes/: descriptor.cpp  descriptor.h  metadata.h  order.cpp  order.h  raster.cpp  raster.h  raster_operations.h  spatial_temporal_reference.cpp  spatial_temporal_reference.h  timeseries.cpp  timeseries.h  timeseries_iterator.cpp  timeseries_iterator.h
src/operators/: aggregator.cpp  aggregator.h  cache_simulator.cpp  cache_simulator.h  consuming_operator.h  convolution.cpp  convolution.h  cumulative_sum.cpp  cumulative_sum.h  expression.cpp  expression.h  expression_operator.cpp  expression_operator.h  filter.cpp  filter.h  generic_operator.cpp  generic_operator.h  order_changer.cpp  order_changer.h  print.cpp  print.h  raster_cache.cpp  raster_cache.h  sampler.cpp  sampler.h  spatial_overlap.cpp  spatial_overlap.h  temporal_overlap.cpp  temporal_overlap.h
src/operators/consuming/: analyzer.cpp  analyzer.h  consuming_operator.cpp  consuming_operator.h  geotiff_export.cpp  geotiff_export.h  print.cpp  print.h  raster_value_extraction.cpp  raster_value_extraction.h
src/operators/source/: fake_source.cpp  fake_source.h  gdal_source.cpp  gdal_source.h  source_operator.cpp  source_operator.h
src/operators/source/backend/: fake_source.cpp  fake_source.h  gdal_source.cpp  gdal_source.h  source_backend.cpp  source_backend.h
src/queries/: operator_tree.cpp  operator_tree.h  query_creator.cpp  query_creator.h
src/util/: benchmark.cpp  benchmark.h  exceptions.h  expression.cpp  expression.h  gdal_util.cpp  gdal_util.h  log.h  make_optional.h  parameters.cpp  parameters.h  parsing.cpp  parsing.h  raster_calculations.cpp  raster_calculations.h  time_interval.cpp  time_interval.h
test/data/: first_dataset.json  second_dataset.json  spat_overlap_1.json  spat_overlap_2.json  temp_overlap_1.json  temp_overlap_2.json
test/data/fake_source/: byte_dataset.json  second_dataset.json  temp_overlap_1.json
test/data/gdal_source/: leaf_area_index.json  temp_month.json
test/data/gdal_source/leaf_area_index/: LICENSE.txt  MOD15A2_M_LAI_2017-01-01_gs_3600x1800.TIFF  MOD15A2_M_LAI_2017-02-01_gs_3600x1800.TIFF
test/data/gdal_source/temp_month/: LICENSE.txt  MOD_LSTD_CLIM_M_2001-01-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-02-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-03-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-04-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-05-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-06-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-07-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-08-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-09-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-10-01_rgb_3600x1800.TIFF  MOD_LSTD_CLIM_M_2001-11-01_rgb_3600x1800.TIFF
test/query/: analyzer.json  benchmark_extraction_all_tiles.json  benchmark_extraction_half_rasters.json  benchmark_extraction_half_tiles.json  benchmark_extraction_two_tiles.json  benchmark_random_access_1.json  benchmark_random_access_1_144.json  benchmark_random_access_1_528.json  benchmark_random_access_2.json  benchmark_random_access_3.json  benchmark_random_access_3_cache.json  benchmark_rasdaman.json  benchmark_rasdaman_aggregation.json  benchmark_sampling.json  benchmark_sampling_diff.json  benchmark_sampling_no.json  benchmark_spatial.json  benchmark_spatial_big.json  benchmark_temporal.json  benchmark_temporal_big.json  gdal_query_1.json  gdal_query_convolution.json  gdal_query_convolution_2.json  gdal_query_leaf_area_index.json  gdal_query_temp_month.json  gdal_query_temp_month_export.json  order_changer.json  order_changer_2.json  test_aggregator.json  test_query.json  test_query_1.json  test_query_2.json  test_query_3.json  test_query_cumulative_sum.json  test_query_extra_data_export.json  test_query_fixed_tile_alignment.json  test_query_not_full_tiles_export.json  test_query_spatial_overlap.json  test_query_temporal_overlap.json  test_raster_value_extraction.json
